2006-04-24  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONInitCrtcRegisters),
	(RADEONInitCrtc2Registers):
	Fix enabling of external VGA output on some cards with dual entity
	setup instead of MergedFB. This was broken due to bogus manipulations
	of a register between the 2 entities. This fix is a big "violent" in
	that it always enables the analog output regardless of what is
	plugged. It should work though (at the expense of some additional
	power consumption). A proper fix should be easy to do once Alex gets
	his output mapping rework in.

2006-04-21  Dave Airlie <airlied@linux.ie>

	* src/radeon_driver.c: (RADEONRestoreMode):
	Bugzilla 6672: fix interrupts on radeon since memmap changes

2006-04-21  Dave Airlie <airlied@linux.ie>

	* src/radeon.h:
	* src/radeon_dri.c: (RADEONDRICloseScreen),
	(RADEONDRIAllocatePCIGARTTable):
	* src/radeon_driver.c: (RADEONEnterVT), (RADEONLeaveVT):
	Add support for backing up the PCIE GART table on VT switch.
	This makes suspend/resume work a lot better on PCIE cards.


2006-04-04  Eric Anholt  <anholt@FreeBSD.org>

	* man/ati.man:
	* man/radeon.man:
	Bug #5632: Fix up ati.4 to explain that it is a wrapper driver for the
	other three.  While here, touch up radeon.4, and add an authors list
	gleaned from checking copyright headers.

2006-04-01  Alex Deucher  <agd5f@yahoo.com>

	* src/radeon.h:
	* src/radeon_driver.c: (RADEONPreInitModes), (RADEONPreInit),
	(RADEONResetDPI), (RADEONSwitchMode):
	* src/radeon_mergedfb.c: (RADEONMergedFBCalcDPI),
	(RADEONMergedFBSetDpi), (RADEONMergedFBResetDpi):
	* src/radeon_mergedfb.h:
	- Fix dpi when switching from clone to dualhead with MergedFB.
	- Add ConstantDPI option to force a particlar dpi across mode changes
	Both based on Thomas Winischhofer's sis code.

2006-03-27  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONRestoreMemMapRegisters),
	(RADEONInit):