@@ -1,3 +1,13 @@
+2006-04-26  Dave Airlie  <airlied@linux.ie>
+
+	* src/radeon.h:
+	* src/radeon_dri.c: (RADEONDRIMapInit):
+	* src/radeon_driver.c: (RADEONMapMMIO), (RADEONUnmapMMIO),
+	(RADEONPreInit):
+	Make the ATI driver use the PCI BAR size to determine
+	the MMIO register aperture size. Otherwise it tries to
+	overmap things if they are up near the end of memory.
+
 2006-04-24  Benjamin Herrenschmidt  <benh@kernel.crashing.org>
 
 	* src/radeon_driver.c: (RADEONInitCrtcRegisters),
